--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Notepad</title>
+    <title>OBS Notepad</title>
     <style>
         body {
             overflow: hidden;
@@ -23,7 +23,6 @@
 </head>
 <body>
 
-    
 <textarea></textarea>
 
 <script>
