--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
             color: white;
             padding: 5px;
         }
+        
+        .char-counter {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
     </style>
 </head>
 <body>
 
 <textarea></textarea>
+<div class="char-counter"><div>
 
 <script>
 
@@ -32,12 +39,14 @@
         var KEY = "v1-text";
         var initText = window.localStorage.getItem(KEY);
 
+        var charCounter = document.querySelector(".char-counter");
+        
         var textarea = document.querySelector("textarea");
         textarea.value = initText;
 
         textarea.addEventListener("keyup", function () {
             console.log("keyup");
-            textarea.placeholder = textarea.value + "test";
+            charCounter.innerText = len(textarea.value);
             window.localStorage.setItem(KEY, textarea.value);
         });
 
