--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         textarea.addEventListener("keyup", function () {
             console.log("keyup");
-            charCounter.innerText = len(textarea.value);
+            charCounter.innerText = textarea.value.length;
             window.localStorage.setItem(KEY, textarea.value);
         });
 
