--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         
         .char-counter {
             position: absolute;
-            right: 0;
-            bottom: 0;
+            right: 5px;
+            bottom: 5px;
+            color: lightgray;
         }
     </style>
 </head>
